fix: gap

--- a/src/renderer/coremods/settings/pages/Addons.css
+++ b/src/renderer/coremods/settings/pages/Addons.css
@@ -48,5 +48,5 @@
 }
 
 .replugged-addon-header-buttons {
-  gap: "5px";
+  gap: 5px;
 }
